tests/fuzzers/bls12381/crashers/8c25fdab4d37684a90ac7ac93ca09036f3a9b551.output
panic: runtime error: index out of range [128] with length 128

goroutine 1 [running]:
github.com/ethereum/go-ethereum/tests/fuzzers/bls12381.(*bls12381G2MultiExp).RequiredGas(0x7bce18, 0xc00015e000, 0x5001, 0xc000, 0x0)
	/home/matematik/go/src/github.com/ethereum/go-ethereum/tests/fuzzers/bls12381/contracts.go:244 +0xf0
github.com/ethereum/go-ethereum/tests/fuzzers/bls12381.Fuzz(0xc00015e000, 0x5001, 0xc000, 0x4)
	/home/matematik/go/src/github.com/ethereum/go-ethereum/tests/fuzzers/bls12381/bls_fuzzer.go:43 +0x28e
go-fuzz-dep.Main(0xc000116f70, 0x1, 0x1)
	go-fuzz-dep/main.go:36 +0x1ad
main.main()
	github.com/ethereum/go-ethereum/tests/fuzzers/bls12381/go.fuzz.main/main.go:15 +0x52
exit status 2